# cashcard

./: .flutter-plugins-dependencies  .gitignore  .metadata  App-Customization.md  README.md  fakeserial.sh  project.code-workspace  pubspec.yaml  windows_build.txt
blobs/usb_esc_printer_c/: CMakeLists.txt  README.md  usb_esc_printer_c.c  usb_esc_printer_c.h
db/: import.csv  init.sql  migrate_0.0.1-0.0.2.sql  migrate_0.0.2-0.0.5.sql  migrate_0.0.2-0.0.6.sql  migrate_0.0.6-0.0.9.sql  products.sql  products_sales.sql  test_data_0.0.6.sql
lang/: en.json  hu.json
lib/: main.dart
lib/app/: app.dart  app_config.dart  app_localizations.dart  routes.dart  style.dart
lib/db/: datasource.dart  db.dart
lib/pages/: entries.dart  overview.dart  pay.dart  quantitydialog.dart  registration.dart  settings.dart  topup.dart  topupdialog.dart
lib/usb_esc_printer/: image_utils.dart
lib/util/: cart.dart  exportservice.dart  extensions.dart  logging.dart  serialport.dart  serialporthelper.dart  snackbarmessage.dart  usbporthelper.dart
lib/widget/: capsulebutton.dart  cart.dart  expandable.dart  filedialog.dart  modaldialog.dart  products.dart  progressdialog.dart  reportsdialog.dart  subpage.dart  virtualkeyboardwidget.dart
linux/: Makefile  main.cc
linux/flutter/: generated_plugin_registrant.cc
macos/: Podfile
macos/Flutter/: Flutter-Debug.xcconfig  Flutter-Release.xcconfig
test/: widget_test.dart
windows/: .gitignore  AppConfiguration.props  CMakeLists.txt  Runner.sln  main.cpp  runner.exe.manifest  win32_window.cc  win32_window.h  window_configuration.cpp
(+9 files in other folders)
